--- a/react-client/package.json
+++ b/react-client/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "build-css": "^0.2.0",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "build-css": "node-sass-chokidar src/sass/ -o src/css/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/sass/ -o src/css/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "eject": "react-scripts eject"
   }
 }
